# remote-shutdown

./: Cargo.toml
shutdown/: Cargo.toml
shutdown/examples/: shutdown.rs
shutdown/src/: impl_win.rs  lib.rs
src/: main.rs
