[package]
name = "shutdown"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.62"
# Use the windows crate rather than windows-sys for nicer errors
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Shutdown", "Win32_System_Threading"] }
